finished mobile version and fixed spacing

--- a/Single Price Grid/styles.css
+++ b/Single Price Grid/styles.css
@@ -30,7 +30,7 @@ body {
 }
 
 .top-container {
-    padding: 1% 10% 1% 5%;
+    padding: 1% 10% 5% 5%;
 }
 
 .top-container > p{
@@ -48,6 +48,7 @@ body {
 .bottom-container {
     display: flex;
 }
+
 
 .bottom-container-left, .bottom-container-right {
     flex-basis: 50%;
@@ -107,4 +108,32 @@ body {
 .bottom-container-right > p {
     color: hsl(204, 43%, 83%);
     font-size: 0.8rem;
+}
+
+@media screen and (max-width:800px) {
+    .bottom-container {
+        flex-direction: column;
+    }
+
+    .bottom-container-left, .bottom-container-right {
+        padding: 2% 8% 8% 8%;
+    }
+
+    .top-container {
+        padding: 2% 8% 8% 8%;
+    }
+
+    .main-container {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .top-container {
+        padding-bottom: 6%;
+    }
+
+    .main-container {
+        width: 60%;
+    }
 }
